Fix dark mode rendering

--- a/_sass/pooleparty/_base.pre.scss
+++ b/_sass/pooleparty/_base.pre.scss
@@ -26,7 +26,6 @@ body {
 }
 
 html {
-  color-scheme: dark light;
   font-family: var(--font-family);
   font-size: var(--root-font-size);
   line-height: var(--root-line-height);
